--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: white;
+  color: #1d1d1d;
+}
+
+header {
+  padding: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.5rem;
+  text-align: center;
+}
+
+header img {
+  width: 8rem;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 2rem;
+}
+
+header p {
+  margin: 0;
+}
+
+#concepts {
+  max-width: 50rem;
+  margin: 2rem auto;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.concept {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: start;
+  border: 1px solid rgb(180, 180, 180);
+  padding: 2rem;
+  width: 33%;
+  transition: all 0.2s
+}
+
+.concept img {
+  width: 10rem;
+  height: 10rem;
+  object-fit: contain;
+  padding-bottom: 0.5rem;
+}
+
+.concept h2 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.concept p {
+  margin: 0;
+  text-align: center;
+  font-size: 1rem;
 }
